--- a/App.config
+++ b/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="INF2011S_Workshop8_WaS7_PIISOL.Properties.Settings.EmployeesV2016ConnectionString"
+        <add name="Workshop8_WaS7.Properties.Settings.EmployeesV2016ConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EmployeesV2016.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
